1998-06-01  Alex Lancaster  <alex@santafe.edu>

	* activity.h (ActionType): Added method -activate: anActionType.

1998-05-22  Alex Lancaster  <alex@santafe.edu>

	* activity.h: (getCurrentTime,getTopLevelActivity): Added
	(//#) documentation strings. (_activity_zone, _activity_trace):
	Made existing inline comments into (//G) doc strings:

1998-05-08  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* CompoundAction.m ([CompoundAction_c -getAutoDrop]): Convert
	the presence of BitAutoDrop in bits to a boolean.

1998-05-06  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* activity.h: Remove instances of <p> Minor spacing changes to
	methods. 
	(ActionType, ActionCreatingCall, ActionCreatingTo,
	ActionCreatingForEach, ActionCreating, Action, ActionArgs,
	ActionCall, ActionTo, Activity, ForEachActivity,
	ScheduleActivity, SwarmActivity): Add phase tags.
	(GetSubactivityAction): Add //S and //D tags.
	(SynchronizationType, InternalTimeMultiplier): Add //S.

1998-04-29  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* activity.h: Include new protocols DefaultOrder, AutoDrop in
	CompoundAction.  Include new protocols ActionCreatingTo,
	ActionCreatingForEach in ActionCreating.  Include new protocols
	RelativeTime, RepeatInterval, ConcurrentGroupType, SingletonGroups
	in Schedule.  Include SynchronizationType and InternalTimeMultiplier
	in SwarmProcess. 
	Disable setTerminateAtEnd:, getTerminateAtEnd,
	setSynchronizedMode:, getSynchronizedMode, and getCurrentTimebase
	from ScheduleActivity protocol.
	Add documentation tags throughout.

1998-04-28  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Schedule.m (_activity_insertAction): Disable code that attempts
	to cope with changes from external schedules.

1997-12-17  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* activity.h: Constify argument to _activity_context_error.

	* XActivity.m (auditRunRequest): Constify request.  Reformat
	function.
	(_activity_context_error): Constify macroName. Reformat function.
