@@ -1,3 +1,7 @@
+1998-06-03  Marcus G. Daniels  <mgd@ute.santafe.edu>
+
+	* activity.h: Add/update documentation tags.
+
 1998-06-01  Alex Lancaster  <alex@santafe.edu>
 
 	* activity.h (ActionType): Added method -activate: anActionType.
